--- a/_source/core/_html.pug
+++ b/_source/core/_html.pug
@@ -1,5 +1,7 @@
 extends /_source/_layouts/core
 block append update_vars
   - path  = ['core',path].join('/')
+block append front_matter
+  +l| index: false
 block nav
   div: +site_nav('core')
