--- a/_config.pug
+++ b/_config.pug
@@ -4,8 +4,8 @@
 
   title        = 'Dove'
   description  = 'A theme development project.'
-  //- # title       : # the title of your site (best without the punctuation dot).
-  //- # description : # a short description of your site's purpose.
+  //- # title       : 'The title of your site'
+  //- # description : 'Short description of your site's purpose.'
 
   author       = 'Techie Joe'
 
@@ -18,13 +18,17 @@
   charset      = 'utf-8'
   lang         = 'en-US'
   theme_color  = '#222'
-  color_scheme = 'light dark'  
-  ghost        = btoa([ "localhost", "localhost:4000", "techie-joe.github.io" ])
+  color_scheme = 'light dark'
 
-  //- google_analytics     = 'google_analytics_id'
-  //- # google_analytics: # your Google Analytics tracking ID.
+  ghost        = btoa([ "localhost", "localhost:4000", "techie-joe.github.io" ])
+  //- ghost = 'your-tracking-id'
+  //- # to track your ThemeJs.
+
+  //- google_analytics = 'your Google Analytics tracking ID'
   //- # to track your website using Google Analytics.
 
-  //- cloudflare_analytics = 'cloudflare_analytics_id'
-  //- # cloudflare_analytics: # your Cloudflare Analytics tracking ID.
+  //- cloudflare_analytics = 'your Cloudflare Analytics tracking ID'
   //- # to track your website using Cloudflare Analytics.
+
+  //- show_downloads: true/false
+  //- # to indicate whether to provide a download URL.
