update 404 and prime index

--- a/_scss/prime/css/style.scss
+++ b/_scss/prime/css/style.scss
@@ -15,6 +15,7 @@ article {
 }
 .markdown-body {
   p { margin-top: 16px }
+  blockquote { color:inherit }
   table {
     & { display:table;border-collapse:collapse;border:1px solid;width:auto }
     thead tr { background-color: #f6f8fa }
