--- a/_includes/legacy.html
+++ b/_includes/legacy.html
@@ -1,6 +1,6 @@
 <p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p><a href="#">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
+<p><a href="#" onclick="event.preventDefault();">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
