--- a/_includes/ui.html
+++ b/_includes/ui.html
@@ -1,5 +1,6 @@
 {%- assign nl="
 " %}
+{%- assign preventDefault="event.preventDefault();" %}
 {% capture thin_hr -%}<hr class="thin" />{%- endcapture %}
 {% capture bull -%} <i class="_icon"><i class="itext">&bull;</i></i> {%- endcapture %}
 {% capture angle -%}<i class="_icon"><i class="isvg"><svg viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path></svg></i></i>{%- endcapture %}
