--- a/_scss/_dove/color.scss
+++ b/_scss/_dove/color.scss
@@ -5,5 +5,4 @@ $text-grey         : #888;
 $text-purple       : #A6D;
 $text-red          : #E22;
 $text-yellow       : #C90;
-$text-orange       : #B50;
-$text-orange-light : #E60;
+$text-orange       : #E60;
