--- a/_scss/_dove/base.scss
+++ b/_scss/_dove/base.scss
@@ -4,25 +4,26 @@
 $grey: #888;
 // ---------------------------------------------------------------
 
-html,body{margin:0}
-body{overflow-y:scroll}
+html,body { margin:0 }
+body { overflow-y:scroll }
 hr { border: 1px solid $grey }
-h1,h2,h3,h4,h5,h6 { margin-block-start:1.5rem;margin-block-end:1rem }
-p,blockquote,details { margin-block-start:1rem;margin-block-end:1rem }
-pre { padding:.5rem;overflow:auto }
-code,tt { background-color: rgba($grey,.3);padding:0 .25em}
-pre { code,tt {background:none} }
-blockquote { border-left: .25rem solid $grey;padding: 0 .5rem; }
-dt { margin-block-start:1rem;font-weight:bold }
+h1,h2,h3,h4,h5,h6 { margin-block-start:1.5rem; margin-block-end:1rem }
+p,blockquote,details { margin-block-start:1rem; margin-block-end:1rem }
+pre { padding:.5rem; overflow:auto }
+code,tt { background-color:rgba($grey,.3); padding:0 .25em}
+pre { code,tt { background:none } }
+blockquote { border-left:.25rem solid $grey; padding: 0 .5rem; }
+details summary p { display:inline }
+dt { margin-block-start:1rem; font-weight:bold }
 dd { margin-block-end:1rem }
-dt { font-style: italic }
+dt { font-style:italic }
 a {
   & { color:$text-blue }
   &:visited { color:$text-purple }
   &:hover { color:$text-blue }
 }
 article {
-  img { max-width:100%;box-sizing:content-box }
+  img { max-width:100%; box-sizing:content-box }
   table {
     & { border-collapse: collapse }
     &, td, th { border: 1px solid $grey }
@@ -31,16 +32,6 @@ article {
 }
 
 // ---------------------------------------------------------------
-
-.float-left{float:left}
-.float-right{float:right}
-
-.text-left{text-align:left}
-.text-right{text-align:right}
-.text-center{text-align:center}
-.text-justify{text-align:justify}
-
-.centered { display:block;margin-left:auto;margin-right:auto; }
 
 .bg-primary{ @extend .bg-blue; }
 .bg-secondary{ @extend .bg-slategrey; }
@@ -56,7 +47,6 @@ article {
 /*
 .bg-purple{background-color:$text-purple}
 .bg-orange{background-color:$text-orange}
-.bg-orange-light{background-color:$text-orange-light}
 */
 
 .text-primary{ @extend .text-blue; }
@@ -73,7 +63,6 @@ article {
 
 .text-purple{color:$text-purple !important}
 .text-orange{color:$text-orange !important}
-.text-orange-light{color:$text-orange-light !important}
 
 .border-primary{ @extend .border-blue; }
 .border-secondary{ @extend .border-slategrey; }
@@ -89,9 +78,4 @@ article {
 /*
 .border-purple{border-color:$text-purple}
 .border-orange{border-color:$text-orange}
-.border-orange-light{border-color:$text-orange-light}
 */
-
-.footnote { padding:0 .15em }
-.footnote,
-.reversefootnote { text-decoration:none !important }
