--- a/_scss/_dove/color.scss
+++ b/_scss/_dove/color.scss
@@ -1,8 +1,8 @@
-$text-blue         : #57F;
+$text-blue         : #36D;
 $text-green        : #2A4;
 $text-slategrey    : #789;
 $text-grey         : #888;
 $text-purple       : #A6D;
 $text-red          : #E22;
-$text-yellow       : #C90;
+$text-yellow       : #DA0;
 $text-orange       : #E60;
