--- a/_source/prime/home.html.pug
+++ b/_source/prime/home.html.pug
@@ -3,15 +3,12 @@ block append vars
   - path   = 'home.html'
   - title  = `Home`
 block content
-  //- .hero-box-1
   style.
-    .hero-box-1 { padding:0 }
-    .hero-box-1 .site-description {
+    .hero_block_1 .site-description {
       margin-left: 3.3rem;
-      font-weight: 300;
       font-size: 1.1em;
     }
-    .hero-box-1 .hero-hr { margin-top:45px }
-  .hero-box-1.box
+    .hero_block_1 .hero-hr { margin-top:45px }
+  .hero_block_1
     h1#_hero-title ⚒️ Heroic Title
     p.site-description Your site's description or mission statement.
