--- a/_scss/_dove/color.scss
+++ b/_scss/_dove/color.scss
@@ -1,8 +1,10 @@
-$text-blue         : #36D;
-$text-green        : #2A4;
-$text-slategrey    : #789;
+$text-black        : #000;
+$text-white        : #fff;
 $text-grey         : #888;
-$text-purple       : #A6D;
-$text-red          : #E22;
+$text-slategrey    : #789;
+$text-red          : #C33;
+$text-blue         : #36D;
+$text-green        : #183;
+$text-purple       : #84C;
 $text-yellow       : #DA0;
 $text-orange       : #E60;
